WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155165
[css-grid] Fix auto-track sizing with min-size:auto and specific sizes
https://bugs.webkit.org/show_bug.cgi?id=155165
Summary
[css-grid] Fix auto-track sizing with min-size:auto and specific sizes
Sergio Villar Senin
Reported
2016-03-08 02:38:45 PST
[css-grid] Fix auto-track sizing with min-size:auto and specific sizes
Attachments
Patch
(14.73 KB, patch)
2016-03-08 03:13 PST
,
Sergio Villar Senin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2016-03-08 03:13:54 PST
Created
attachment 273285
[details]
Patch
Sergio Villar Senin
Comment 2
2016-03-09 03:02:35 PST
Committed
r197854
: <
http://trac.webkit.org/changeset/197854
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug